@@ -8,6 +8,8 @@
 
     <include package="plone.contentrules" />
     <include package="plone.contentrules" file="meta.zcml" />
+    
+    <include package="plone.stringinterp" />
 
     <!-- Create permissions -->
 
