@@ -27,6 +27,7 @@ setup(name='plone.app.contentrules',
         'plone.contentrules',
         'zope.container',
         'plone.memoize',
+        'plone.stringinterp',
         'plone.app.form',
         'plone.app.kss',
         'plone.app.vocabularies',
