@@ -4,6 +4,9 @@ Changelog
 2.0.0 - unreleased
 ------------------
 
+- Use plone.stringinterp for adaptable string substitution in mail action.
+  Plip #9256. [smcmahon]
+
 - Adjusted some import statements to use the new zope.container.
   [hannosch]
 
